# bifrostjs-godot

./: Cargo.toml
crates/gdjs/: Cargo.toml
crates/gdjs/src/: console.rs  converters.rs  engine.rs  input.rs  lib.rs  modules.rs  prelude.rs  proxy_rect.rs  proxy_transform.rs  proxy_transform3.rs  proxy_vec.rs  proxy_vec3.rs  rect2.rs  transform2d.rs  transform3d.rs  util.rs  vector3.rs
crates/js_core/: Cargo.toml
crates/js_core/src/: lib.rs  typescript.rs  utils.rs
example/: .gdextension  .gdextension.uid  .gitignore  demo.tscn  icon.svg.import  node.gd  node.gd.uid  project.godot
example/imgs/: adv-board.png.import  air-conditioners.png.import  anatomy-table.png.import  bench.png.import  body-burner.png.import  character-base-sketch-taller.png.import  computer-desk.png.import  construction-stuff.png.import  cover.png.import  graffiti-big.png.import  indoor-gangsite-small.png.import  laser-door.png.import  outdoor-doors.png.import  outdoor-misc-stuff.png.import  plants-tree.png.import  robot-arm.png.import  surgery-room.png.import  vehicles-fixing.png.import  vehicles.png.import
example/scenes/: player.tscn
example/scripts/: bifrostjs.d.ts  bifrostjs.d.ts.import  package.json  player.ts  player.ts.import  test.ts  test.ts.import  tsconfig.json
example/scripts/for_node/: demo.js  demo.js.import  node.js  node.js.import  node.ts  (+2 more)
src/: bifrost_js_module.rs  engine.rs  js_importer.rs  js_utility.rs  lib.rs  manager.rs  manager_context.rs  node.rs  prelude.rs  proxy_deps.rs  signal_bridge.rs
src/js_core/: console.rs  mod.rs  proxy_vec.rs  utils.rs  vectors.rs
(+14 files in other folders)
