[workspace]
members = ["crates/js_core", "crates/gdjs"]

[package]
name = "bifrost-js"
version = "0.1.0"
edition = "2024"

[dependencies]
godot = { version = "0.5.3", features = ["experimental-threads"] }
rquickjs = { version = "0.11.0", features = ["macro", "bindgen"] }
js_core = { path = "crates/js_core" }
gdjs = { path = "crates/gdjs" }

[lib]
crate-type = ["cdylib"]
